--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,13 @@ dependencies:
   freezed_annotation: ^2.2.0
   json_annotation: ^4.8.1
   flutter_bloc: ^8.1.2
+  cloud_firestore: ^4.7.1
+  shared_preferences: ^2.1.1
+  firebase_core: ^2.13.0
+  rxdart: ^0.27.7
+  flutter_bcrypt: ^1.0.8
+  bcrypt: ^1.1.3
+  fluttertoast: ^8.2.2
 
 dev_dependencies:
   flutter_test:
