--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   flutter_bcrypt: ^1.0.8
   bcrypt: ^1.1.3
   fluttertoast: ^8.2.2
+  image_picker: ^0.8.7+5
 
 dev_dependencies:
   flutter_test:
