--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   bcrypt: ^1.1.3
   fluttertoast: ^8.2.2
   image_picker: ^0.8.7+5
+  firebase_storage: ^11.2.2
+  cloudinary_public: ^0.21.0
 
 dev_dependencies:
   flutter_test:
