insert product success

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,7 +47,7 @@ dependencies:
   fluttertoast: ^8.2.2
   image_picker: ^0.8.7+5
   firebase_storage: ^11.2.2
-  cloudinary_public: ^0.21.0
+  cloudinary: ^1.1.1
 
 dev_dependencies:
   flutter_test:
